@@ -1,70 +1,59 @@
 package com.example.Novus.domain;
 
-import com.example.Novus.dto.UserDTO;
 import jakarta.persistence.*;
-import lombok.AccessLevel;
-import lombok.Builder;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
+import lombok.Setter;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
+import java.math.BigDecimal;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
-@Table(name = "users")
-@NoArgsConstructor(access = AccessLevel.PROTECTED)
-@Getter
 @Entity
-public class User implements UserDetails {
+@Table(name = "users")
+@Getter
+@Setter
+@NoArgsConstructor
+public class User extends BaseEntity implements UserDetails {
 
-    @Id
-    @GeneratedValue(strategy = GenerationType.IDENTITY)
-    @Column(name = "id", updatable = false)
-    private Long id;
-
-    @Column(name = "email", nullable = false, unique = true)
+    @Column(nullable = false, unique = true)
     private String email;
 
-    @Column(name = "name")
     private String name;
-
-    @Column(name = "given_name")
     private String givenName;
-
-    @Column(name = "family_name")
     private String familyName;
-
-    @Column(name = "profile_picture_url")
     private String profilePictureUrl;
 
-    @Column(name = "oauth_provider")
-    @Enumerated(value = EnumType.STRING)
+    @Enumerated(EnumType.STRING)
     private OAuthProvider oAuthProvider;
+
+    private String displayName;
+    private String bio;
+    private BigDecimal price;
+
+    @OneToMany(mappedBy = "user", cascade = CascadeType.ALL, orphanRemoval = true)
+    private List<Post> posts = new ArrayList<>();
+
+    @OneToMany(mappedBy = "user", cascade = CascadeType.ALL, orphanRemoval = true)
+    private List<Comment> comments = new ArrayList<>();
 
     @OneToMany(mappedBy = "subscriber", cascade = CascadeType.ALL, orphanRemoval = true)
     private List<Subscription> subscriptions = new ArrayList<>();
 
-    @Builder
-    public User(String email, String name, String familyName, String givenName, String profilePictureUrl, OAuthProvider oAuthProvider) {
-        this.email = email;
-        this.name = name;
-        this.familyName = familyName;
-        this.givenName = givenName;
-        this.profilePictureUrl = profilePictureUrl;
-        this.oAuthProvider = oAuthProvider;
-    }
-
-    public User updateProfilePicture(String newProfilePictureUrl) {
-        this.profilePictureUrl = newProfilePictureUrl;
-        return this;
-    }
-
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority("ROLE_USER"));
+        return Collections.singletonList(new SimpleGrantedAuthority("ROLE_USER"));
+    }
+
+    public void updateProfile(String displayName, String bio, BigDecimal price) {
+        this.displayName = displayName;
+        this.bio = bio;
+        this.price = price;
     }
 
     @Override
@@ -74,7 +63,7 @@ public class User implements UserDetails {
 
     @Override
     public String getUsername() {
-        return email;
+        return this.email;
     }
 
     @Override
@@ -95,21 +84,5 @@ public class User implements UserDetails {
     @Override
     public boolean isEnabled() {
         return true;
-    }
-
-
-
-    public void addSubscription(Subscription subscription) {
-        subscriptions.add(subscription);
-        subscription.setSubscriber(this);
-    }
-
-    public void removeSubscription(Subscription subscription) {
-        subscriptions.remove(subscription);
-        subscription.setSubscriber(null);
-    }
-
-    public UserDTO toDTO() {
-        return new UserDTO(this.id, this.email, this.name, this.profilePictureUrl);
     }
 }
